src/objects/PastProvenValueNew__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>GAP_Past_Proven_Value</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Challenge_Addressed__c</fullName>
        <label>Challenge Addressed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Final_Delivery_Date__c</fullName>
        <label>Final Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Micro_Industry__c</fullName>
        <label>Micro Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Project/Capability Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Titulo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Casos de exito en la cuenta</fullName>
                </value>
                <value>
                    <fullName>Diferenciadores competitivos en la cuenta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Value__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipName>GAP_Past_Proven_Value</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SCP Past Proven Value</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>GAP Past Proven Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCP Past Proven Value</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>